--- a/webapp/src/component/Home.css
+++ b/webapp/src/component/Home.css
@@ -23,15 +23,44 @@
     transition: 0.2s;
     cursor: pointer;
 }
+
+.darkCard{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 300px;
+    background-color: #3c3f4e;
+    border-radius: 10px;
+    margin: 1rem;
+    padding: 1rem;
+    box-shadow: 0 0 10px #353533;
+    font-size: 1.5rem;
+    color: #757f9b;
+    font-weight: 700;
+    transition: 0.2s;
+    cursor: pointer; 
+}
 .card:nth-child(1):hover{
     background-color: #cfcfa2;
     box-shadow: 0 0 15px 10px #31312e;
     color:#353533
 }
+.darkCard:nth-child(1):hover{
+    background-color: #4d536d;
+    box-shadow: 0 0 15px 10px #31312e;
+    color: #a2aabe
+}
 .card:nth-child(2):hover{
     background-color: #cfcfa2;
     box-shadow: 0 0 15px 10px #31312e;
     color:#353533
+}
+.darkCard:nth-child(2):hover{
+    background-color: #4d536d;
+    box-shadow: 0 0 15px 10px #31312e;
+    color: #a2aabe
 }
 @media screen and (max-width: 950px){
     .homepage{
